2.0RC1
Solved bug to manage the Year correctly thanks to Vincent.
Added a copy constructor to the CrontabEntryBean
Updated the org.jcrontab.data.DataSource to remove store(CrontabEntryBean ceb),
this has been replaced by the right logic in the CrontabEntryBeanDAO to maintain 
only store(CrontabEntryBean[] cebs)
Added org.jcrontab.data.MemorySourceWithOutPersistence, this feature is added to
make easier to use Jcrontab in testing enviroments and to make it easier to use
in programatic environments.
Added Avalon to component the ability to pass a parameter named "start" that controls whether to start or not the component.
Added Avalon component wrapper so JCrontab can be used as an avalon component
Added XMLParser to read and store CrontabEntryBeans in xml format
Added XMLSource to manage CrontabEntryBeans in xml format
Solved bug with years logic now the years work like the rest of fields
Added patch 838865 thanks to dp4b
Added bin dir this directory will the place to save the scripts to start/stop Jcrontab as an standalone app
Solved nasty bug with */0 thanks to Guenter
Solved bug to compare the Year correctly
Added MemorySourceWithOutPersistence to help in testing and automatic
environments
Added Process Logic, Bean, Managers, etc. See the related doc
1.4.1
Updated copyright notice
changed org.jcrontab.Jcrontab to adapt to the right message
Added default values to CrontabEntryBean to avoid nulls in SQLSource
updated GenericSQLSource to remove effectively the CrontabEntryBean
Updated org.jcrontab.data.tests.DAOTest
Applied patch 801052 thanks to Hans Benedict
Applied patch 801051 thanks to Hans Benedict
updated FileSource to remove correctly the CrontabEntryBean
Added junit tests to the ant build.xml
Removed org.jcrontab.tests.TestDAO.java
1.4
Added Basic support for Beans from Tim Stephenson
CHanged MANIFEST.MF to adapt it to the last log4j
Solved bug 769389, now NativeExec works on XP
Adapted to jdk1.4.2 to solve finally nasty mess